--- a/vcsa-deploy/README
+++ b/vcsa-deploy/README
@@ -2,7 +2,9 @@ This module can be used to bootstrap a VCSA install prior to using the Terraform
 
 Notes:
 
-  - Ensure you use the correct target specification (ESX or vCenter). Sensible defaults have been choosen to reduce the number of manadatory variables required.
+  - Extract the VCSA ISO to a local copy of the module directory in a folder called ISO, or point the path variable to a mounted or extracted ISO elsewhere
+  - Ensure you use the correct target specification (ESX or vCenter). 
+  - Sensible defaults have been choosen to reduce the number of manadatory variables required.
   - Changing the FQDN of the vCenter will trigger a redeployment
 
 This version is for vCenter 6.7, and has only been tested with 6.7 U2 so far. Feel free comment with other working versions or to submit a pull request to extend the version coverage.
